Add comprehensive tests for login functionality, token-based authentication, and decision-making workflows, including:
- `AuthControllerTest` for user authentication and lastLogin updates.
- `AuthTokenFilterTest` for token validation and throttled lastLogin updates.
- Decision snapshot restoration logic with `DecisionScenarioRestoreIntegrationTest` and `DecisionScenarioRestoreRunner`.
- `DecisionCreatedCauseTest` for verifying DTO behavior.